Shopify Uncommited changes

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -246,8 +246,8 @@
         "type": "header",
         "settings": {
           "remove_space": true,
-          "enable_top_announcement": true,
-          "top_announcement_text": "<span style=\"font-size: 18px;text-transform: uppercase;\">Hurry up!<\/span> <span style=\"font-size: 18px;\">Special Christmas sale.<\/span> <span style=\"color: white;font-size: 20px;\">UP TO 50% OFF DEALS<\/span>",
+          "enable_top_announcement": false,
+          "top_announcement_text": "<span style=\"font-size: 18px;text-transform: uppercase;\">Hurry up!<\/span> <span style=\"font-size: 18px;\">Special New Year sale.<\/span> <span style=\"color: white;font-size: 20px;\"><\/span>",
           "align_logo": "left",
           "logo": "shopify:\/\/shop_images\/Logo-unidragon.png",
           "desktop_logo_size": "90%",
@@ -400,7 +400,7 @@
           "enable_trust_badges": false,
           "pdp_enable": true,
           "pdp_enable_banner": true,
-          "pdp_image_banner": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
+          "pdp_image_banner": "shopify:\/\/shop_images\/new_banner_10.jpg",
           "pdp_image": "shopify:\/\/shop_images\/new_img_a79e2b7e-362a-4eb1-85d0-a79a3dbc6454.jpg",
           "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
           "pdp_sub_title": "The discount will be applied automatically in the cart.",
@@ -487,7 +487,7 @@
           "shopping_payment": true,
           "pdp_enable": true,
           "pdp_enable_banner": true,
-          "pdp_image_banner": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
+          "pdp_image_banner": "shopify:\/\/shop_images\/new_banner_10.jpg",
           "pdp_image": "shopify:\/\/shop_images\/cart.jpg",
           "pdp_title": "<b>Add any 3 puzzles to your cart and <span class=\"other_infos\">get 10% discount on your order<\/span><\/b>",
           "pdp_sub_title": "The discount will be applied automatically in the cart.",
@@ -1266,7 +1266,7 @@
           "enable_trust_badges": false,
           "pdp_enable": true,
           "pdp_enable_banner": true,
-          "pdp_image_banner": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
+          "pdp_image_banner": "shopify:\/\/shop_images\/new_banner_10.jpg",
           "pdp_image": "shopify:\/\/shop_images\/new_img_a79e2b7e-362a-4eb1-85d0-a79a3dbc6454.jpg",
           "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
           "pdp_sub_title": "The discount will be applied automatically in the cart.",
@@ -1972,8 +1972,8 @@
           "rows": 8,
           "show_collection_image": true,
           "enable_parallax": false,
-          "enable_full_banner": true,
-          "img": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
+          "enable_full_banner": false,
+          "img": "shopify:\/\/shop_images\/4_1__-4.png",
           "img_width": "715px",
           "enable_video": true,
           "enable_external_video": false,
@@ -1996,8 +1996,8 @@
           "rows": 8,
           "show_collection_image": true,
           "enable_parallax": false,
-          "enable_full_banner": true,
-          "img": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
+          "enable_full_banner": false,
+          "img": "shopify:\/\/shop_images\/4_1__-4.png",
           "img_width": "715px",
           "enable_video": true,
           "enable_external_video": false,
@@ -2014,9 +2014,10 @@
       },
       "1637763556bc7ccf4c": {
         "type": "image-banner",
+        "disabled": true,
         "settings": {
           "enable_full_banner": true,
-          "img": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
+          "img": "shopify:\/\/shop_images\/4_1__-4.png",
           "img_width": "715px"
         }
       },
@@ -2140,7 +2141,7 @@
           "enable_trust_badges": false,
           "pdp_enable": true,
           "pdp_enable_banner": true,
-          "pdp_image_banner": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
+          "pdp_image_banner": "shopify:\/\/shop_images\/new_banner_10.jpg",
           "pdp_title": "",
           "pdp_sub_title": "",
           "heading-tax": "",
@@ -2340,7 +2341,7 @@
           "enable_trust_badges": false,
           "pdp_enable": true,
           "pdp_enable_banner": true,
-          "pdp_image_banner": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
+          "pdp_image_banner": "shopify:\/\/shop_images\/new_banner_10.jpg",
           "pdp_title": "",
           "pdp_sub_title": "",
           "heading-tax": "",
@@ -2525,6 +2526,7 @@
         "blocks": {
           "7bbd658b-ae5f-4667-9c8d-377b00f8c90f": {
             "type": "ProductsNew",
+            "disabled": true,
             "settings": {
               "landing_new_product": "fiery-fox",
               "rating": "5.0",
@@ -2533,6 +2535,7 @@
           },
           "3ffe9149-0d62-467c-a986-52f284ad1b16": {
             "type": "ProductsNew",
+            "disabled": true,
             "settings": {
               "landing_new_product": "lovely-tiger",
               "rating": "5.0",
@@ -2541,18 +2544,11 @@
           },
           "fd3d20b2-15cc-431d-986c-37858bbf6b5c": {
             "type": "ProductsNew",
+            "disabled": true,
             "settings": {
               "landing_new_product": "fairy-bird",
               "rating": "5.0",
               "reviews": "34 reviews"
-            }
-          },
-          "0489dc8e-bf6a-469e-aff0-2dc1720bf8a5": {
-            "type": "ProductsBest",
-            "settings": {
-              "landing_best_product": "fiery-fox",
-              "rating": "5.0",
-              "reviews": "32 reviews"
             }
           },
           "cff6855b-5251-4eef-addb-17e748856eb5": {
@@ -2563,8 +2559,17 @@
               "reviews": "40 reviews"
             }
           },
+          "0489dc8e-bf6a-469e-aff0-2dc1720bf8a5": {
+            "type": "ProductsBest",
+            "settings": {
+              "landing_best_product": "fiery-fox",
+              "rating": "5.0",
+              "reviews": "32 reviews"
+            }
+          },
           "8732be4e-47a0-4359-abcc-f8c087148553": {
             "type": "ProductsBest",
+            "disabled": true,
             "settings": {
               "landing_best_product": "fairy-bird",
               "rating": "5.0",
@@ -2594,18 +2599,54 @@
               "landing_product": "",
               "image_collection": "shopify:\/\/shop_images\/landing-category-3_2x_a9d18cb8-ff0e-4de3-97ab-69711d9c594c.jpg"
             }
+          },
+          "b7c8520f-4e8b-4e95-a26a-649247b70bcf": {
+            "type": "ProductsNew",
+            "settings": {
+              "landing_new_product": "quezzle",
+              "rating": "5.0",
+              "reviews": "4 reviews"
+            }
+          },
+          "c32a6fe9-4449-43a3-8a87-5581ba8b2ef1": {
+            "type": "ProductsNew",
+            "settings": {
+              "landing_new_product": "mandala-overarching-opposites",
+              "rating": "5.0",
+              "reviews": "5 reviews"
+            }
+          },
+          "32d7f79c-79b1-4b4c-b2f5-8df8a5fad68f": {
+            "type": "ProductsNew",
+            "settings": {
+              "landing_new_product": "mandala-inexhaustible-abundance",
+              "rating": "5.0",
+              "reviews": "6 reviews"
+            }
+          },
+          "855d2547-4e8c-48d6-8d4a-5c948709f20f": {
+            "type": "ProductsBest",
+            "settings": {
+              "landing_best_product": "playful-parrots",
+              "rating": "5.0",
+              "reviews": "15 reviews"
+            }
           }
         },
         "block_order": [
           "7bbd658b-ae5f-4667-9c8d-377b00f8c90f",
           "3ffe9149-0d62-467c-a986-52f284ad1b16",
           "fd3d20b2-15cc-431d-986c-37858bbf6b5c",
-          "0489dc8e-bf6a-469e-aff0-2dc1720bf8a5",
           "cff6855b-5251-4eef-addb-17e748856eb5",
+          "0489dc8e-bf6a-469e-aff0-2dc1720bf8a5",
           "8732be4e-47a0-4359-abcc-f8c087148553",
           "666608e0-acdc-417f-80fa-111cf88a5d12",
           "09bfdfe4-d494-4acb-9187-9df3d77c82ce",
-          "4ae3ca50-1365-4aeb-bda0-17bcb041227a"
+          "4ae3ca50-1365-4aeb-bda0-17bcb041227a",
+          "b7c8520f-4e8b-4e95-a26a-649247b70bcf",
+          "c32a6fe9-4449-43a3-8a87-5581ba8b2ef1",
+          "32d7f79c-79b1-4b4c-b2f5-8df8a5fad68f",
+          "855d2547-4e8c-48d6-8d4a-5c948709f20f"
         ],
         "settings": {
           "order_on_website": "https:\/\/unidragon.com\/collections\/wooden-puzzles\/?utm_source=instagram_tap",
