--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -168,9 +168,10 @@
     "social_youtube_link": "",
     "social_vimeo_link": "",
     "display_3pazl_discount": true,
-    "display_tag_month": true,
+    "display_tag_month": false,
     "tag_month_text": "Product <br>\nof the Month",
     "tag_month_font_size": 12,
+    "tag_month_alignment": "center",
     "tag_month_color": "#ff862d",
     "tag_month_product": "wandering-jellyfish",
     "checkout_header_image": "",
