--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -2072,14 +2072,14 @@
           "habitat_name_third": "Plesiosaurus",
           "habitat_bg_fourth": "shopify:\/\/shop_images\/habitat-bg-4.png",
           "habitat_icon_fourth": "shopify:\/\/shop_images\/habitat-img4_c563e8b7-b2e6-416e-af25-79aafd7a43ac.png",
-          "habitat_label_fourth": "Coming soon",
-          "habitat_url_fourth": "",
+          "habitat_label_fourth": "On sale now",
+          "habitat_url_fourth": "https:\/\/unidragon.com\/products\/triceratops",
           "habitat_name_fourth": "Triceratops",
           "habitat_bg_fifth": "shopify:\/\/shop_images\/habitat-bg-5.png",
           "habitat_icon_fifth": "shopify:\/\/shop_images\/habitat-img5_a5e3e8ee-2a4f-4f6a-b7ba-1f0c2255458c.png",
           "habitat_icon_sidebar": "shopify:\/\/shop_images\/sidebar-numbers-3-icon_6841dccc-669a-4cd7-9d9d-b5d03be24637.png",
-          "habitat_label_fifth": "Coming soon",
-          "habitat_url_fifth": "",
+          "habitat_label_fifth": "On sale now",
+          "habitat_url_fifth": "https:\/\/unidragon.com\/products\/tyrannosaurus-rex",
           "habitat_name_fifth": "Tyrannosaurus",
           "dinopazzle_bg": "shopify:\/\/shop_images\/dino-pazzle.png",
           "dinopazzle_title": "Our puzzles are made of wood.",
@@ -2401,24 +2401,29 @@
           "habitat_bg_first": "shopify:\/\/shop_images\/habitat-bg-1.png",
           "habitat_icon_first": "shopify:\/\/shop_images\/habitat-img1.png",
           "habitat_label_first": "Coming soon",
+          "habitat_url_first": "",
           "habitat_name_first": "Stegosaurus",
           "habitat_bg_second": "shopify:\/\/shop_images\/habitat-bg-2.png",
           "habitat_icon_second": "shopify:\/\/shop_images\/habitat-img2.png",
           "habitat_label_second": "Coming soon",
+          "habitat_url_second": "",
           "habitat_name_second": "Pterodactyl",
           "habitat_bg_third": "shopify:\/\/shop_images\/habitat-bg-3.png",
           "habitat_icon_third": "shopify:\/\/shop_images\/habitat-img3.png",
           "habitat_label_third": "Coming soon",
+          "habitat_url_third": "",
           "habitat_name_third": "Plesiosaurus",
           "habitat_bg_fourth": "shopify:\/\/shop_images\/habitat-bg-4.png",
           "habitat_icon_fourth": "shopify:\/\/shop_images\/habitat-img4.png",
-          "habitat_label_fourth": "Coming soon",
+          "habitat_label_fourth": "On sale now",
+          "habitat_url_fourth": "https:\/\/unidragon.com\/products\/triceratops",
           "habitat_name_fourth": "Triceratops",
-          "habitat_bg_fifth": "shopify:\/\/shop_images\/habitat-bg-5.png",
-          "habitat_icon_fifth": "shopify:\/\/shop_images\/habitat-img5.png",
+          "habitat_bg_fifth": "shopify:\/\/shop_images\/Frame.png",
+          "habitat_icon_fifth": "shopify:\/\/shop_images\/icon4diplodok10_174ccbcb-941a-4514-b05b-9d2a87340f14.png",
           "habitat_icon_sidebar": "shopify:\/\/shop_images\/sidebar-numbers-3-icon.png",
-          "habitat_label_fifth": "Coming soon",
-          "habitat_name_fifth": "Tyrannosaurus",
+          "habitat_label_fifth": "On sale now",
+          "habitat_url_fifth": "https:\/\/unidragon.com\/products\/diplodocus",
+          "habitat_name_fifth": "Diplodocus",
           "dinopazzle_bg": "shopify:\/\/shop_images\/dino-pazzle_cb0f11bb-dbbd-429b-813a-bff6e017a6b2.png",
           "dinopazzle_icon": "shopify:\/\/shop_images\/icon30-tiranozavr_e983349b-19d9-40c0-97c0-a6b541e15652.png",
           "dinopazzle_title": "Our puzzles are made of wood.",
@@ -2499,16 +2504,16 @@
           "habitat_label_third": "Coming soon",
           "habitat_url_third": "",
           "habitat_name_third": "Plesiosaurus",
-          "habitat_bg_fourth": "shopify:\/\/shop_images\/habitat-bg-4.png",
-          "habitat_icon_fourth": "shopify:\/\/shop_images\/habitat-img4.png",
-          "habitat_label_fourth": "Coming soon",
-          "habitat_url_fourth": "",
-          "habitat_name_fourth": "Triceratops",
+          "habitat_bg_fourth": "shopify:\/\/shop_images\/Frame_fd7c09e9-1345-49ee-b706-43338e0d3960.png",
+          "habitat_icon_fourth": "shopify:\/\/shop_images\/icon4diplodok10_0e0ef7b7-6895-464b-8b92-e3ad4babfbe9.png",
+          "habitat_label_fourth": "On sale now",
+          "habitat_url_fourth": "https:\/\/unidragon.com\/products\/diplodocus",
+          "habitat_name_fourth": "Diplodocus",
           "habitat_bg_fifth": "shopify:\/\/shop_images\/habitat-bg-5.png",
           "habitat_icon_fifth": "shopify:\/\/shop_images\/habitat-img5.png",
           "habitat_icon_sidebar": "shopify:\/\/shop_images\/sidebar-numbers-3-icon.png",
-          "habitat_label_fifth": "Coming soon",
-          "habitat_url_fifth": "",
+          "habitat_label_fifth": "On sale now",
+          "habitat_url_fifth": "https:\/\/unidragon.com\/products\/tyrannosaurus-rex",
           "habitat_name_fifth": "Tyrannosaurus",
           "dinopazzle_bg": "shopify:\/\/shop_images\/dino-pazzle_bbdaa339-2e93-4d97-8df4-6053cdeea6ed.png",
           "dinopazzle_icon": "shopify:\/\/shop_images\/icon3-triceratops.png",
@@ -2866,10 +2871,23 @@
               "prom_link": "Learn more >>",
               "prom_link_url": "\/pages\/gift-for-review"
             }
+          },
+          "ffe412ea-57b7-483c-a88f-65b8a23dfbb3": {
+            "type": "Image",
+            "settings": {
+              "prom_image": "shopify:\/\/shop_images\/211102_-_banner_na_sait__1_1.jpg",
+              "image_aligment": "row-reverse",
+              "prom_action": "The promotion is valid from 01\/01\/2022 to 12\/31\/2022",
+              "prom_second_title": "Get 10% discount",
+              "prom_description": "Buy any 3 jigsaw puzzles and get 10% discount. The discout will be automatically displayed in the cart.",
+              "prom_link": "Shop now >>",
+              "prom_link_url": "shopify:\/\/collections"
+            }
           }
         },
         "block_order": [
-          "e0e99347-bb46-4190-8d90-72eb8bc8f946"
+          "e0e99347-bb46-4190-8d90-72eb8bc8f946",
+          "ffe412ea-57b7-483c-a88f-65b8a23dfbb3"
         ],
         "settings": {
           "prom_title": "Special offers and promotions"
