--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -160,7 +160,7 @@
     "share_twitter": true,
     "share_pinterest": true,
     "social_twitter_link": "",
-    "social_facebook_link": "https:\/\/www.facebook.com\/Unidragon.World",
+    "social_facebook_link": "https:\/\/www.facebook.com\/unidragonPuzzle",
     "social_pinterest_link": "",
     "social_instagram_link": "https:\/\/instagram.com\/unidragon_com",
     "social_tumblr_link": "",
@@ -168,12 +168,13 @@
     "social_youtube_link": "",
     "social_vimeo_link": "",
     "display_3pazl_discount": true,
-    "display_tag_month": false,
+    "display_tag_month": true,
     "tag_month_text": "Product <br>\nof the Month",
     "tag_month_font_size": 12,
     "tag_month_alignment": "center",
     "tag_month_color": "#ff862d",
-    "tag_month_product": "wandering-jellyfish",
+    "tag_month_product": "wooden-jigsaw-puzzle-mysterious-lion",
+    "tag_month_product1": "wooden-jigsaw-puzzle-panda",
     "checkout_header_image": "",
     "checkout_logo_image": "",
     "checkout_logo_position": "left",
@@ -375,6 +376,7 @@
         "settings": {
           "buy_it_now_action": "thank_you_message",
           "show_cart_drawer": true,
+          "enable_back_in_stock": false,
           "show_saved_amount": true,
           "enable_default_variant": false,
           "show_quantity_selector": true,
@@ -406,7 +408,7 @@
           "enable_trust_badges": false,
           "pdp_enable": true,
           "pdp_enable_banner": true,
-          "pdp_image_banner": "shopify:\/\/shop_images\/ValentinesDay-02.png",
+          "pdp_image_banner": "shopify:\/\/shop_images\/211102_-_banner_na_sait__1_1.jpg",
           "pdp_image": "shopify:\/\/shop_images\/new_img_a79e2b7e-362a-4eb1-85d0-a79a3dbc6454.jpg",
           "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
           "pdp_sub_title": "The discount will be applied automatically in the cart.",
@@ -1978,7 +1980,7 @@
           "rows": 8,
           "show_collection_image": true,
           "enable_parallax": false,
-          "enable_full_banner": true,
+          "enable_full_banner": false,
           "img": "shopify:\/\/shop_images\/ValentinesDay-02.png",
           "img_width": "715px",
           "enable_video": true,
@@ -2946,6 +2948,11 @@
           "star_text_font_size": 16,
           "star_padding": 3,
           "star_text_padding": 10
+        }
+      },
+      "redesign-header": {
+        "type": "redesign-header",
+        "settings": {
         }
       }
     },
